<resources>
    <string name="app_name">NontonYuk</string>

    <!-- Onboarding Button Text -->
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="memulai">Memulai</string>

    <!-- Onboarding Intro Text -->
    <string name="onboarding_one_title">Now Playing</string>
    <string name="onboarding_one_subtitle">Lebih mudah untuk mengetahui \n film yang sedang tayang</string>
    <string name="onboarding_two_title">Pre Sale</string>
    <string name="onboarding_two_subtitle">Tidak khawatir ketinggalan update film terbaru</string>
    <string name="onboarding_three_title">Cashless</string>
    <string name="onboarding_three_subtitle">Menggunakan e-wallet untuk \n pembelian tiket nonton</string>

    <!-- Sign In Text -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang \nAbdul</string>

    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun">Daftar Akun Baru</string>


    <!-- Home Screen -->
    <string name="now_playing">Now Playing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
